[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rankpool"
version = "0.1.0"
description = "RankPool: Power mean weighted pooling for occlusion-robust deep learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["pooling", "robustness", "occlusion", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.9",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/rankpool"
Issues = "https://github.com/YOUR_USERNAME/rankpool/issues"
